--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -24,8 +24,12 @@ section {
 
 
 
-.istat, .contactUs{
+.istat{
     background-color: #4a8db7;
+}
+
+.contactUs{
+    background-color: #A1E1FA;
 }
 
 
