--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -37,6 +37,17 @@ section {
     height: 100%;
 }
 
+.card>svg{
+    width: 55%;
+    margin: auto;
+}
+
+iframe{
+    width: 100%;
+    
+    box-shadow: 1px 6px 15px 1px rgb(0 0 0 / 25%);
+    border-radius: 20px;
+}
 
 
 
@@ -51,6 +62,19 @@ section {
 
     to {
         transform: scaleY(50%);
+    }
+}
+
+@keyframes circleMovement {
+    from {
+        
+        transform: rotate(0deg) scale(1); 
+        
+    }
+
+    to {
+        transform: rotate(180deg) scale(0.7); 
+        
     }
 }
 
@@ -72,3 +96,15 @@ section {
     animation: 1s ease-in-out infinite alternate waveMovement;
     animation-delay: 1s;
 }
+
+#circle {
+    transform-origin: 50% 50%; 
+    transform-box: fill-box;
+    animation: 1.8s ease-in-out infinite alternate circleMovement;
+}
+#circle1 {
+    transform-origin: 50% 50%; 
+    transform-box: fill-box;
+    animation: 1.5s ease-in-out infinite alternate circleMovement;
+}
+
