[UPDATE] Home css

--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -10,3 +10,8 @@ body {
 .overflow-y-hidden {
     overflow-y: hidden;
 }
+
+.btn-primary{
+    --bs-btn-bg: #4A8DB7;
+    --bs-btn-border-color: #4A8DB7;
+}
