--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -74,3 +74,15 @@ section {
     animation: 1s ease-in-out infinite alternate waveMovement;
     animation-delay: 1s;
 }
+
+.our-team {
+    img {
+        filter: grayscale(100%);
+        -webkit-filter: grayscale(100%);
+    }
+    
+    img:hover {
+        filter: none;
+        -webkit-filter: grayscale(0);
+    }
+}
