--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -1,11 +1,11 @@
 /* Bootstrap import */
 @import "~bootstrap/scss/bootstrap";
+@import './colors.scss';
 
 body {
-    background-color: #A1E1FA;
+    background-color: $blue-100;
     scroll-behavior: smooth;
 }
-
 
 .overflow-y-hidden {
     overflow-y: hidden;
@@ -14,4 +14,8 @@ body {
 .btn-primary{
     --bs-btn-bg: #4A8DB7;
     --bs-btn-border-color: #4A8DB7;
+}
+
+.min-h-100 {
+    min-height: 100vh;
 }
