--- a/preditco-frontend/src/components/Footer/Footer.scss
+++ b/preditco-frontend/src/components/Footer/Footer.scss
@@ -1,3 +1,5 @@
+@import '../../colors.scss';
+
 .footer-svg-github {
     width: 50px;
     height: 50px;
@@ -15,5 +17,5 @@
 
 .link-footer {
     text-decoration: none;
-    color: black;
+    color: $black;
 }
