--- a/preditco-frontend/src/components/Navbar/Navbar.scss
+++ b/preditco-frontend/src/components/Navbar/Navbar.scss
@@ -1,8 +1,10 @@
+@import '../../colors.scss';
+
 /* Nav Style */
 .nav-link {
     a {
         text-decoration: none;
-        color: black;
+        color: $black;
     }
 }
 .navbar-collapse {
@@ -13,12 +15,12 @@
 .nav-svg-github {
     max-height: 70px;
     max-width: 70px;
-    color: white;
+    color: $white;
 }
 .nav-svg-istat {
     max-height: 70px;
     max-width: 120px;
-    color: white;
+    color: $white;
 }
 .nav-link-font {
     font-size: 1.3em;
@@ -31,7 +33,7 @@
     content: '';
     position: absolute;
     height: 2px;
-    background-color: white;
+    background-color: $white;
     width: 130%;
 }
 .nav-footer::after {
@@ -55,8 +57,8 @@
 
 /* Color test */
 .bg-blue {
-    background-color: #280E71;
+    background-color: $blue-600;
 }
 .bg-skyblue {
-    background-color: #A1E1FA;
+    background-color: $blue-100;
 }
