[NEW-FEATURES]Statistics page setting

--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -3,7 +3,7 @@
 @import './colors.scss';
 
 body {
-    background-color: $blue-100;
+    background-color: white;
     scroll-behavior: smooth;
 }
 
