--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -4,6 +4,11 @@ section {
   min-height: 100vh;
 }
 
+.home{
+  background-color: $blue-100;
+
+}
+
 .animated-svg {
   width: 100%;
 }
@@ -16,7 +21,7 @@ section {
 }
 
 .container {
-  background-color: $blue-100;
+  
   max-width: none;
 }
 
@@ -24,9 +29,7 @@ section {
   background-color: $blue-300;
 }
 
-.contactUs {
-  background-color: $blue-100;
-}
+  
 
 .card > svg {
   width: 55%;
