--- a/preditco-frontend/src/pages/statistics/Statistics.scss
+++ b/preditco-frontend/src/pages/statistics/Statistics.scss
@@ -2,9 +2,10 @@
 
 .board{
    
-    margin: 75px auto auto auto;
+    margin: 90px auto auto auto;
     background-color: $blue-100;
     border: none;
+    width: 80%;
 }
 
 .setting {
@@ -13,3 +14,24 @@
     border-radius: 60px;
     text-align: center;
 }
+
+.chart {
+    width: 50px;
+    height: 50px;
+    border-radius: 60px;
+    text-align: center;
+    .button-text-chart {
+        display: none;
+    }
+}
+
+.chart:hover {
+    width: 100px;
+    .button-text-chart{
+        display: block;
+        font-size: 0.7em;
+    }
+}
+
+
+
