--- a/preditco-frontend/src/pages/statistics/Statistics.scss
+++ b/preditco-frontend/src/pages/statistics/Statistics.scss
@@ -33,5 +33,25 @@
     }
 }
 
+.chart-view{
+    width: 90%;
+    height: 60vh;
+}
+
+
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) { .chart-view{
+//     width: 100%;
+//     height: 60vh;
+// } }
+
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) { .chart-view{
+//     width: 80%;
+//     height: 60vh;
+// } }
+
+
+
 
 
