--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -5,8 +5,11 @@ section {
 }
 
 .home{
-  background-color: $blue-100;
-
+  background-image: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.3)), url('../../assets/images/blue-1.jpeg');
+  background-position: left;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .animated-svg {
