[UPDATE]Background HomePage

--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -5,7 +5,7 @@ section {
 }
 
 .home{
-  background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('../../assets/images/blue-1.jpeg');
+  background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('../../assets/images/background.svg');
   background-position: left;
   background-repeat: no-repeat;
   background-attachment: fixed;
