--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -19,3 +19,15 @@ body {
 .min-h-100 {
     min-height: 100vh;
 }
+
+.min-h-90 {
+    min-height: 95vh;
+}
+
+/* BG color */
+.bg-blue {
+    background-color: $blue-600;
+}
+.bg-skyblue {
+    background-color: $blue-100;
+}
