[UPDATE] Update UI in statistic page and logic

--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -31,3 +31,18 @@ body {
 .bg-skyblue {
     background-color: $blue-100;
 }
+
+.bg-custom {
+    background-position: left;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  
+    &.sky-blue{
+      background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('./assets/images/background.svg');
+    }
+  
+    &.blue{
+      background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('./assets/images/background02.svg');  
+    }
+  }
