--- a/preditco-frontend/src/pages/statistics/Statistics.scss
+++ b/preditco-frontend/src/pages/statistics/Statistics.scss
@@ -2,7 +2,8 @@
 
 .board{
    
-    margin: 90px auto auto auto;
+    margin: 0 auto 0 auto;
+    padding-top: 90px!important;
     background-color: $blue-100;
     border: none;
     width: 80%;
@@ -35,7 +36,13 @@
 
 .chart-view{
     width: 90%;
-    height: 60vh;
+    min-height: 60vh;
+    background-color: rgba(255, 255, 255, 0.863);
+}
+
+.arrow-svg {
+    height: 60px;
+    width: 60px;
 }
 
 
