--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -20,8 +20,19 @@ body {
     min-height: 100vh;
 }
 
-.min-h-90 {
-    min-height: 95vh;
+.min-h-60 {
+    min-height: 60vh;
+}
+/* SVG resize */
+.loading-svg {
+    height: 200px;
+    width: 200px;
+}
+.tutorial-svg {
+  height: 30px;
+  width: 30px;
+  color: rgba(255, 255, 255, 0.863);
+  cursor: pointer;
 }
 
 /* BG color */
@@ -44,5 +55,61 @@ body {
   
     &.blue{
       background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('./assets/images/background02.svg');  
+    }
+  }
+
+  @keyframes waveMovement {
+    from {
+      transform: scaleY(100%);
+    }
+  
+    to {
+      transform: scaleY(50%);
+    }
+  }
+  
+  @keyframes circleMovement {
+    from {
+      transform: rotate(0deg) scale(1);
+    }
+  
+    to {
+      transform: rotate(180deg) scale(0.7);
+    }
+  }
+  
+  #wave {
+    transform-origin: bottom;
+    animation: 1.8s ease-in-out infinite alternate waveMovement;
+  }
+  
+  #wave1 {
+    transform-origin: bottom;
+    animation: 1.5s ease-in-out infinite alternate waveMovement;
+    animation-delay: 0.5s;
+  }
+  
+  #wave2 {
+    transform-origin: bottom;
+    animation: 1s ease-in-out infinite alternate waveMovement;
+    animation-delay: 1s;
+  }
+
+  #circle {
+    transform-origin: 50% 50%;
+    transform-box: fill-box;
+    animation: 1.8s ease-in-out infinite alternate circleMovement;
+  }
+
+  #circle1 {
+    transform-origin: 50% 50%;
+    transform-box: fill-box;
+    animation: 1.5s ease-in-out infinite alternate circleMovement;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .tutorial-svg {
+      height: 50px;
+      width: 50px;
     }
   }
