--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -7,6 +7,9 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+a {
+  text-decoration: none;
+}
 
 .overflow-y-hidden {
     overflow-y: hidden;
