--- a/preditco-frontend/src/components/Tutorial/Tutorial.scss
+++ b/preditco-frontend/src/components/Tutorial/Tutorial.scss
@@ -40,19 +40,7 @@
     font-size: 16px;
   }
   
-  .tutorial-content button {
-    padding: 10px 20px;
-    border: 0;
-    border-radius: 5px;
-    background-color: #333;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .tutorial-content button:hover {
-    background-color: #444;
-  }
+
 
   .tutorial-form {
     margin: 20px; 
@@ -61,5 +49,5 @@
 
 
   .highlight {
-    outline: 5px solid yellow;
+    outline: 5px solid rgb(217, 255, 0);
   }
