--- a/preditco-frontend/src/pages/statistics/Statistics.scss
+++ b/preditco-frontend/src/pages/statistics/Statistics.scss
@@ -26,12 +26,13 @@
 }
 
 .chart:hover {
-    width: 100px;
-    .button-text-chart{
-        display: block;
-        font-size: 0.7em;
-    }
-}
+    width: 50px;
+     .button-text-chart{
+         display: none;
+         font-size: 0.7em;
+
+     }
+ }
 
 .chart-view{
     width: 90%;
@@ -56,5 +57,15 @@
 //     height: 60vh;
 // } }
 
+//Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    .chart:hover {
+        width: 100px;
+        .button-text-chart{
+            display: block;
+            font-size: 0.7em;
+        }
+    }
+}
 
 
