--- a/preditco-frontend/src/pages/Login/login.scss
+++ b/preditco-frontend/src/pages/Login/login.scss
@@ -184,13 +184,13 @@ $primary: rgb(182, 157, 230);
     display: flex;
     flex-direction: row;
     width: 80vh;
-    height: 50vh;
     margin: auto auto;
     background: #ffffff;
     border-radius: 4px;
     box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
   }
   .left {
+    display: block;
     width: 220px;
     height: auto;
     min-height: 100%;
