[UPDATE] Add close and previous in tutorial.

--- a/preditco-frontend/src/components/Tutorial/Tutorial.scss
+++ b/preditco-frontend/src/components/Tutorial/Tutorial.scss
@@ -1,6 +1,5 @@
 .tutorail-header-step {
     color: blue;
-    margin: 10px;
 }
 
 .tutorial-content-step {
@@ -15,7 +14,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.085); /* make the background semi-transparent */
+    background-color: rgba(0, 0, 0, 0.329); /* make the background semi-transparent */
     z-index: 999; /* make the tutorial overlay appear on top of other elements */
     display: flex; /* center the tutorial content horizontally and vertically */
     align-items: center;
@@ -50,4 +49,10 @@
 
   .highlight {
     outline: 5px solid rgb(217, 255, 0);
+  }
+
+  .tutorial-close-svg {
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
   }
