[UPDATE] Update ux tutorial.

--- a/preditco-frontend/src/components/Tutorial/Tutorial.scss
+++ b/preditco-frontend/src/components/Tutorial/Tutorial.scss
@@ -56,3 +56,10 @@
     width: 20px;
     height: 20px;
   }
+
+  .tutorial-navigation-step {
+    width: 10px;
+    height: 10px;
+    border: 1.5px solid black;
+    border-radius: 50%
+  }
