--- a/preditco-frontend/src/pages/statistics/Statistics.scss
+++ b/preditco-frontend/src/pages/statistics/Statistics.scss
@@ -44,6 +44,10 @@
     height: 60px;
     width: 60px;
 }
+.swiper-button-next, .swiper-button-prev {
+    display: none!important;
+    color: $blue-600!important;
+}
 
 // // Small devices (landscape phones, 576px and up)
 // @media (min-width: 576px) { .chart-view{
@@ -58,7 +62,7 @@
 // } }
 
 //Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media screen and  (min-width: 576px) {
     .chart:hover {
         width: 100px;
         .button-text-chart{
@@ -67,5 +71,11 @@
         }
     }
 }
+
+ @media screen and (min-width:768px) {
+    .swiper-button-next, .swiper-button-prev {
+        display: block!important;
+    }
+} 
 
 
