--- a/preditco-frontend/src/pages/Home/home.scss
+++ b/preditco-frontend/src/pages/Home/home.scss
@@ -10,9 +10,17 @@
   width: 350px;
   box-shadow: 1px 6px 15px 1px rgb(0 0 0 / 25%);
   border-radius: 20px;
+  box-shadow: none;
+  transition: 0.6s;
+}
+
+.card-home:hover {
+  
+  box-shadow: 8px 10px 26px 3px $blue-600;
 }
 
 .istat {
+  transition: 0.5;
   background-color: $blue-300;
 }
 
