--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -3,24 +3,26 @@
 @import './colors.scss';
 
 body {
-    background-color: white;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+  background-color: white;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
+
 a {
   text-decoration: none;
 }
 
 .overflow-y-hidden {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 
-.btn-primary{
-    --bs-btn-bg: #4a8db7c5;
-    --bs-btn-border-color: #4A8DB7;
-    &:hover {
-      background-color: #4A8DB7;
-      border-color: #4A8DB7;
+.btn-primary {
+  --bs-btn-bg: #4a8db7c5;
+  --bs-btn-border-color: #4A8DB7;
+
+  &:hover {
+    background-color: #4A8DB7;
+    border-color: #4A8DB7;
   }
 }
 
@@ -29,19 +31,23 @@ a {
 }
 
 .min-h-100 {
-    min-height: 100vh;
+  min-height: 100vh;
 }
+
 .min-h-90 {
   min-height: 95vh;
 }
+
 .min-h-60 {
-    min-height: 60vh;
+  min-height: 60vh;
 }
+
 /* SVG resize */
 .loading-svg {
-    height: 200px;
-    width: 200px;
+  height: 200px;
+  width: 200px;
 }
+
 .tutorial-svg {
   height: 20px;
   width: 20px;
@@ -51,80 +57,85 @@ a {
 
 /* BG color */
 .bg-blue {
-    background-color: $blue-600;
+  background-color: $blue-600;
 }
+
 .bg-skyblue {
-    background-color: $blue-100;
+  background-color: $blue-100;
 }
 
 .bg-custom {
-    background-position: left;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    
-  
-    &.sky-blue{
-      background-image: /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), */ url('./assets/images/backgroundb.png');
-    }
-  
-    &.blue{
-      background-image: /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)),  */url('./assets/images/background02b.png'); 
-    }
+  background-position: left;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+
+  &.sky-blue {
+    background-image:
+      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), */
+      url('./assets/images/backgroundb.png');
   }
 
-  @keyframes waveMovement {
-    from {
-      transform: scaleY(100%);
-    }
-  
-    to {
-      transform: scaleY(50%);
-    }
+  &.blue {
+    background-image:
+      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)),  */
+      url('./assets/images/background02b.png');
   }
-  
-  @keyframes circleMovement {
-    from {
-      transform: rotate(0deg) scale(1);
-    }
-  
-    to {
-      transform: rotate(180deg) scale(0.7);
-    }
-  }
-  
-  #wave {
-    transform-origin: bottom;
-    animation: 1.8s ease-in-out infinite alternate waveMovement;
-  }
-  
-  #wave1 {
-    transform-origin: bottom;
-    animation: 1.5s ease-in-out infinite alternate waveMovement;
-    animation-delay: 0.5s;
-  }
-  
-  #wave2 {
-    transform-origin: bottom;
-    animation: 1s ease-in-out infinite alternate waveMovement;
-    animation-delay: 1s;
+}
+
+@keyframes waveMovement {
+  from {
+    transform: scaleY(100%);
   }
 
-  #circle {
-    transform-origin: 50% 50%;
-    transform-box: fill-box;
-    animation: 1.8s ease-in-out infinite alternate circleMovement;
+  to {
+    transform: scaleY(50%);
+  }
+}
+
+@keyframes circleMovement {
+  from {
+    transform: rotate(0deg) scale(1);
   }
 
-  #circle1 {
-    transform-origin: 50% 50%;
-    transform-box: fill-box;
-    animation: 1.5s ease-in-out infinite alternate circleMovement;
+  to {
+    transform: rotate(180deg) scale(0.7);
   }
+}
 
-  @media only screen and (min-width: 768px) {
-    .tutorial-svg {
-      height: 40px;
-      width: 40px;
-    }
+#wave {
+  transform-origin: bottom;
+  animation: 1.8s ease-in-out infinite alternate waveMovement;
+}
+
+#wave1 {
+  transform-origin: bottom;
+  animation: 1.5s ease-in-out infinite alternate waveMovement;
+  animation-delay: 0.5s;
+}
+
+#wave2 {
+  transform-origin: bottom;
+  animation: 1s ease-in-out infinite alternate waveMovement;
+  animation-delay: 1s;
+}
+
+#circle {
+  transform-origin: 50% 50%;
+  transform-box: fill-box;
+  animation: 1.8s ease-in-out infinite alternate circleMovement;
+}
+
+#circle1 {
+  transform-origin: 50% 50%;
+  transform-box: fill-box;
+  animation: 1.5s ease-in-out infinite alternate circleMovement;
+}
+
+@media only screen and (min-width: 768px) {
+  .tutorial-svg {
+    height: 40px;
+    width: 40px;
   }
+}
