--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -26,6 +26,11 @@ a {
   }
 }
 
+.btn:disabled {
+  background-color: #4a8db7c5;
+  border-color: #4a8db7c5;
+}
+
 .modal-header {
   border-bottom: none;
 }
