--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -26,8 +26,8 @@ a {
   }
 }
 
-h1 {
-  font-size: 60px;
+.title-home {
+  font-size: 30px;
   font-weight: bolder;
 }
 
@@ -153,5 +153,9 @@ h1 {
   .tutorial-svg {
     height: 40px;
     width: 40px;
+  }
+
+  .title-home {
+    font-size: 50px;
   }
 }
