--- a/preditco-frontend/src/App.scss
+++ b/preditco-frontend/src/App.scss
@@ -17,14 +17,25 @@ a {
 }
 
 .btn-primary {
-  --bs-btn-bg: #4a8db7c5;
-  --bs-btn-border-color: #4A8DB7;
+  color: black;
+  background-color: $blue-100;
+  border-color: $blue-100;
 
   &:hover {
-    background-color: #4A8DB7;
-    border-color: #4A8DB7;
+    color: black;
+    background-color: $blue-200;
+    border-color: $blue-200;
   }
 }
+
+.btn-secondary {
+  color: black;
+
+  &:hover {
+    color: black;
+  }
+}
+
 
 .title-home {
   font-size: 30px;
@@ -83,20 +94,17 @@ a {
 
   &.sky-blue {
     background-image:
-      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), */
-      url('./assets/images/background.png');
+      linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url('./assets/images/background.png');
   }
 
   &.blue {
     background-image:
-      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)),  */
-      url('./assets/images/background02.png');
+      linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./assets/images/background02.png');
   }
 
   &.purple {
     background-image:
-      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)),  */
-      url('./assets/images/background-purple.png');
+      /* linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)),  */ url('./assets/images/background-purple.png');
   }
 }
 
