--- a/preditco-frontend/src/pages/Login/login.scss
+++ b/preditco-frontend/src/pages/Login/login.scss
@@ -7,7 +7,7 @@ $primary: rgb(182, 157, 230);
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("../../assets/images/background-purple.png");
+  background-image: url("../../assets/images/background-purple.webp");
   background-size: cover;
   h4 {
     font-size: 24px;
@@ -194,7 +194,7 @@ $primary: rgb(182, 157, 230);
     height: auto;
     min-height: 100%;
     position: relative;
-    background-image: url("../../assets/images/background.svg");
+    background-image: url("../../assets/images/background.webp");
     background-size: cover;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
