--- a/preditco-frontend/src/pages/predictions/Predictions.scss
+++ b/preditco-frontend/src/pages/predictions/Predictions.scss
@@ -3,7 +3,7 @@
 .board-p{
     margin: 0 auto 0 auto;
     padding-top: 90px!important;
-    background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('../../assets/images/background02.svg');  
+    background-image: linear-gradient(rgba(76, 60, 221, 0.436), rgba(0, 0, 0, 0.1)), url('../../assets/images/background02.webp');  
     width: 80%;
     border: transparent;
 }
@@ -45,17 +45,6 @@
     width: 60px;
 }
 
-// // Small devices (landscape phones, 576px and up)
-// @media (min-width: 576px) { .chart-view{
-//     width: 100%;
-//     height: 60vh;
-// } }
-
-// // Medium devices (tablets, 768px and up)
-// @media (min-width: 768px) { .chart-view{
-//     width: 80%;
-//     height: 60vh;
-// } }
 
 //Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
