--- a/preditco-frontend/src/components/Tutorial/Tutorial.scss
+++ b/preditco-frontend/src/components/Tutorial/Tutorial.scss
@@ -17,7 +17,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.61);
   /* make the background semi-transparent */
-  z-index: 9999;
+  z-index: 9998;
   /* make the tutorial overlay appear on top of other elements */
   display: flex;
   /* center the tutorial content horizontally and vertically */
@@ -50,8 +50,8 @@
 
 .highlight {
   outline: 5px solid rgb(217, 255, 0);
-
   pointer-events: none;
+  z-index: 9999!important;
 }
 
 .tutorial-close-svg {
